# modis-tools

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements2.txt  setup.py  test.json.json  test.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: Usage Help  bug_report.md
.github/workflows/: pull_request.yml
modis_tools/: api.py  auth.py  decorators.py  granule_handler.py  models.py  pydantic_urllib_check_v2.py  request_helpers.py  resources.py  test_json_2.json  test_json_working_links_1.json
modis_tools/constants/: mimetypes.py  urls.py
tests/: test_api.py  test_auth.py  test_models.py  test_request_helpers.py  test_resources.py
